Refactor dependencies, and optimize code (#37)
* feat: upgrade to Spring Boot 4 and refactor Jackson dependencies

* feat: add unit test configuration and update cache settings

* feat: add cache manager to controller tests and include cache-related dependencies

* feat: update Spring Cloud version to 2025.1.1 in pom.xml

* feat: change primitive types to wrapper types for order and geonameId fields

* feat: remove feign-jackson dependency from pom.xml

* feat: update .gitignore to include Eclipse project files

* feat: update .gitignore to ignore all settings directories

* feat: update Dockerfile to use OpenJDK 21 JRE slim base image

* feat: optimize code by removing unused imports and updating stream operations